--- a/sudoku-django-project/requirements.txt
+++ b/sudoku-django-project/requirements.txt
@@ -1,2 +1,11 @@
+asgiref==3.2.10
 Django==3.1.2
+flake8==3.8.4
+mccabe==0.6.1
 mysqlclient==2.0.1
+protobuf==3.13.0
+pycodestyle==2.6.0
+pyflakes==2.2.0
+pytz==2020.1
+six==1.15.0
+sqlparse==0.3.1
