--- a/.gitignore
+++ b/.gitignore
@@ -135,4 +135,4 @@ dmypy.json
 *.cnf
 
 #CSS file
-.\sudoku-django-project\mainapp\static\mainapp\tailwind-output.css
+/sudoku-django-project/mainapp/static/mainapp/tailwind-output.css
