--- a/sudoku-django-project/requirements.txt
+++ b/sudoku-django-project/requirements.txt
@@ -1,8 +1,10 @@
 asgiref==3.2.10
 Django==3.1.2
+django-mysql==3.9.0
 flake8==3.8.4
 mccabe==0.6.1
-mysqlclient==2.0.1
+mysql-connector-python==8.0.22
+mysqlclient==1.4.6
 protobuf==3.13.0
 pycodestyle==2.6.0
 pyflakes==2.2.0
