--- a/sudoku-django-project/requirements.txt
+++ b/sudoku-django-project/requirements.txt
@@ -4,10 +4,11 @@ django-mysql==3.9.0
 flake8==3.8.4
 mccabe==0.6.1
 mysql-connector-python==8.0.22
-mysqlclient==1.4.6
+mysqlclient==2.0.1
 protobuf==3.13.0
 pycodestyle==2.6.0
 pyflakes==2.2.0
+PyMySQL==0.10.1
 pytz==2020.1
 six==1.15.0
 sqlparse==0.3.1
