--- a/sudoku-django-project/requirements.txt
+++ b/sudoku-django-project/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.2.10
+cffi==1.14.3
+cryptography==3.2.1
 Django==3.1.2
 django-mysql==3.9.0
 flake8==3.8.4
@@ -7,9 +9,9 @@ mysql-connector-python==8.0.22
 mysqlclient==2.0.1
 protobuf==3.13.0
 pycodestyle==2.6.0
+pycparser==2.20
 pyflakes==2.2.0
 PyMySQL==0.10.1
 pytz==2020.1
 six==1.15.0
 sqlparse==0.3.1
-gunicorn==20.0.4
