--- a/sudoku-django-project/requirements.txt
+++ b/sudoku-django-project/requirements.txt
@@ -4,6 +4,7 @@ cryptography==3.2.1
 Django==3.1.2
 django-mysql==3.9.0
 flake8==3.8.4
+gunicorn==20.0.4
 mccabe==0.6.1
 mysql-connector-python==8.0.22
 mysqlclient==2.0.1
